samples/_failures_safe/1761128217_2bfe83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caf8bca1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_caf8bca1.c:151:32: error: expected ‘;’ at end of input
  151 |                 token->value[0]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_caf8bca1.c:151:17: error: expected declaration or statement at end of input
  151 |                 token->value[0]
      |                 ^~~~~
./samples/SAFE/__tmp_caf8bca1.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_caf8bca1.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_caf8bca1.c:151:17: error: expected declaration or statement at end of input
